# RLATR

./: .gitignore  README.md
Code/: readme.md
Code/Matlab_scripts/: intersection.mlx  inverseJacobian.mlx
Code/python_tools/: qlearning.py
Code/python_tools/FactoryEnv/: README.md  setup.cfg  setup.py
Code/python_tools/FactoryEnv/factory_env/: __init__.py
Code/python_tools/FactoryEnv/tests/: PPO.py  PPO_lstm.py  README.md  SBPPO.py  agent_note.md  argsdef.py  draft.ipynb  fb_pooling.py  gui.py  how2run.md  intersection.ipynb  intersection_calc.py  is_env_registered.py  path_instance.pkl  recordtest.py  sim_sensor.ipynb  teleop.py  test.ipynb  test.py  test_real.py  time_test.py  tuning_hints.md  why.py
Code/python_tools/FactoryEnv/visualization/: atr_visual.py  entropy.ipynb  (+12 more)
Code/python_tools/rl_agent/: agent.py  q_agent.py  randtest.py  rl_agent.py
Code/ros_ws/: docker-compose.yml  readme.md
Code/ros_ws/src/factory_db/: CMakeLists.txt  Dockerfile  README.md  package.xml
Code/ros_ws/src/factory_db/config/atr/: atr.param.yaml
Code/ros_ws/src/factory_db/config/perception/: overlapping_area_fusion.yaml  tag_and_object_detector.yaml
Code/ros_ws/src/gpss_atr/atr_controller/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_atr/atr_controller/aux/: DeltaTheta.m
Code/ros_ws/src/gpss_atr/atr_controller/config/: test.param.yaml
Code/ros_ws/src/gpss_atr/atr_controller/include/atr_controller/: ATRController.hpp  ATRControllerConfig.hpp  ATRControllerNode.hpp  ATRControllerSubs.old  visibility_control.hpp
Code/ros_ws/src/gpss_atr/atr_controller/src/: ATRController.cpp  ATRControllerConfig.cpp  ATRControllerNode.cpp
Code/ros_ws/src/gpss_atr/atr_controller/test/: pendulum_controller_autostart.test.py  pendulum_controller_lifecycle.test.py  test_pendulum_controller.cpp  test_pendulum_controller_node.cpp
Code/ros_ws/src/gpss_atr/atr_demo/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_atr/atr_demo/config/: atr_demo.param.yaml  atr_demo_plot_juggler.xml
Code/ros_ws/src/gpss_atr/atr_demo/launch/: atr_debug.launch.py  atr_driver_atr_1.launch.py  atr_driver_bringup.launch.py  atr_dummy.launch.py  atr_scenario.launch.py  atr_scenario_atr_1.launch.py  atr_scenario_foo.launch.py  atr_scenario_path.launch.py
Code/ros_ws/src/gpss_atr/atr_demo/src/Applications/: atr_demo.cpp  atr_driver_demo.cpp
Code/ros_ws/src/gpss_atr/atr_demo/test/: pendulum_demo_autostart.test.py  pendulum_demo_lifecycle.test.py
Code/ros_ws/src/gpss_atr/atr_description/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_atr/atr_description/config/: atr.param.yaml
Code/ros_ws/src/gpss_atr/atr_description/launch/: atr_base_bringup.launch.py  atr_base_bringup_atr_1.launch.py  atr_base_bringup_multiple.launch.py  atr_base_bringup_multiple_nojoint.launch.py  atr_base_bringup_nojoint.launch.py  atr_bringup.launch.py  atr_bringup_multiple.launch.py  atr_bringup_nojoint.launch.py
Code/ros_ws/src/gpss_atr/atr_description/rviz/: atr_scenario.rviz  urdf.rviz  urdf_multiple.rviz  urdf_multiple_4.rviz
Code/ros_ws/src/gpss_atr/atr_description/urdf/: atr_robot.urdf.xacro  atr_robot_base.urdf.xacro  automower.urdf.xacro  automower_base.urdf.xacro  parameters.urdf.xacro  sensorpos.urdf.xacro  simple.urdf  simple.urdf.xacro  swivel_wheel.urdf.xacro  table.urdf.xacro  wheel.urdf.xacro
Code/ros_ws/src/gpss_atr/atr_driver/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_atr/atr_driver/config/: test.param.yaml
Code/ros_ws/src/gpss_atr/atr_driver/include/atr_driver/: ATRDriver.hpp  ATRDriverConfig.hpp  ATRDriverNode.hpp  RungeKutta.hpp  visibility_control.hpp
Code/ros_ws/src/gpss_atr/atr_driver/src/: ATRDriver.cpp  ATRDriverConfig.cpp  ATRDriverNode.cpp  RungeKutta.cpp
Code/ros_ws/src/gpss_atr/atr_driver/src/Applications/: atr_demo.old.cpp
Code/ros_ws/src/gpss_atr/atr_factory_state/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_atr/atr_factory_state/config/: atr_factory_state.yaml
Code/ros_ws/src/gpss_atr/atr_factory_state/include/atr_factory_state/: ATRFactoryState.h
Code/ros_ws/src/gpss_atr/atr_factory_state/launch/: atr_trajectory_generator_test_launch.py
Code/ros_ws/src/gpss_atr/atr_factory_state/rviz/: atrScenario.rviz
Code/ros_ws/src/gpss_atr/atr_factory_state/src/: ATRFactoryState.cpp
Code/ros_ws/src/gpss_atr/atr_factory_state/src/Applications/: atr_factory_state_node.cpp
Code/ros_ws/src/gpss_atr/atr_joy/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_atr/atr_joy/config/: atr_joy.yaml  atr_joy_jointcmd.yaml
Code/ros_ws/src/gpss_atr/atr_joy/include/atr_joy/: Joy2JointCMD.h  Joy2Twist.h
Code/ros_ws/src/gpss_atr/atr_joy/launch/: joyCF710_JointCMD_launch.py  joyCF710_launch.py
Code/ros_ws/src/gpss_atr/atr_joy/src/: Joy2JointCMD.cpp  Joy2Twist.cpp
Code/ros_ws/src/gpss_atr/atr_joy/src/Applications/: joy2joint_cmd_CF710.cpp  joy2twist_CF710.cpp
Code/ros_ws/src/gpss_atr/atr_utils/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_atr/atr_utils/include/atr_utils/: AuxTools.h  NodeDescriptions.h  atr_utils.hpp  convert_extended.h  lifecycle_autostart.hpp  math_defs.h  memory_lock.hpp  process_settings.hpp  rt_thread.hpp
Code/ros_ws/src/gpss_atr/atr_utils/src/: AuxTools.cpp  NodeDescriptions.cpp  atr_utils.cpp  memory_lock.cpp  rt_thread.cpp
Code/ros_ws/src/gpss_interfaces/atr_camera_state_msgs/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_interfaces/atr_camera_state_msgs/msg/: ATRCameraState.msg  ATRCameraStateListStamped.msg
Code/ros_ws/src/gpss_interfaces/atr_srvs/: CMakeLists.txt  README.md  package.xml
Code/ros_ws/src/gpss_interfaces/atr_srvs/srv/: GetATRFormation.srv  GetFactoryState.srv  GetObjectList.srv  GetObjectListStamped.srv  ReloadGains.srv  TriggerATRActuator.srv  TriggerATRSignals.srv  UpdateATRPath.srv  UpdateATRPathList.srv  UpdateJobList.srv  UpdateObjectList.srv  UpdateObstacleList.srv  UpdatePredictedObjectList.srv
Documentation/How2s/: ATRinDocker.md  RL.md  Ros2InConda.md  preparation.md  readme.md  requirements.txt  useful_commands.md
(+197 files in other folders)
